--- a/config/services.yaml
+++ b/config/services.yaml
@@ -19,6 +19,11 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
-
+    App\EventListener\CompteTransactionListener:
+        tags:
+            - { name: doctrine.event_listener, event: postFlush }
+            - { name: doctrine.event_listener, event: postUpdate }
+            - { name: doctrine.event_listener, event: postPersist }
+            - { name: doctrine.event_listener, event: postRemove }
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
