--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,9 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/dbal": "^3",
-        "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.4",
-        "doctrine/orm": "^3.3",
         "firebase/php-jwt": "^6.11",
+        "lcobucci/jwt": "*",
         "lexik/jwt-authentication-bundle": "^3.1",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.1",
@@ -79,6 +78,8 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.62"
+        "symfony/maker-bundle": "^1.62",
+        "symfony/stopwatch": "7.2.*",
+        "symfony/web-profiler-bundle": "7.2.*"
     }
 }
