--- a/config/packages/mercure.yaml
+++ b/config/packages/mercure.yaml
@@ -3,6 +3,5 @@ mercure:
         default:
             url: '%env(MERCURE_URL)%'
             public_url: '%env(MERCURE_PUBLIC_URL)%'
-            jwt:
-                secret: '%env(MERCURE_JWT_SECRET)%'
-                publish: '*'
+            jwt: "testtoken"
+            #jwt_provider: App\Mercure\JwtProvider
