--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,17 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/dbal": "^3",
-        "doctrine/doctrine-migrations-bundle": "^3.4",
+        "doctrine/dbal": "^3.9.4",
+        "doctrine/doctrine-migrations-bundle": "^3.4.1",
+        "doctrine/orm": "^3.3.2",
         "firebase/php-jwt": "^6.11",
-        "lcobucci/jwt": "*",
-        "lexik/jwt-authentication-bundle": "^3.1",
-        "phpdocumentor/reflection-docblock": "^5.6",
+        "lcobucci/jwt": ">=5.5",
+        "lexik/jwt-authentication-bundle": "^3.1.1",
+        "phpdocumentor/reflection-docblock": "^5.6.1",
         "phpstan/phpdoc-parser": "^2.1",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
-        "symfony/flex": "^2",
+        "symfony/flex": "^2.5",
         "symfony/framework-bundle": "7.2.*",
         "symfony/mercure": "^0.6.5",
         "symfony/mercure-bundle": "^0.3.9",
@@ -78,7 +79,8 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.62",
+        "symfony/debug-bundle": "7.2.*",
+        "symfony/maker-bundle": "^1.62.1",
         "symfony/stopwatch": "7.2.*",
         "symfony/web-profiler-bundle": "7.2.*"
     }
