--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
         "doctrine/doctrine-migrations-bundle": "^3.4.1",
         "doctrine/orm": "^3.3.2",
         "firebase/php-jwt": "^6.11",
-        "lcobucci/jwt": ">=5.5",
+        "lcobucci/jwt": "^5.5",
         "lexik/jwt-authentication-bundle": "^3.1.1",
+        "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.6.1",
         "phpstan/phpdoc-parser": "^2.1",
         "symfony/console": "7.2.*",
@@ -21,6 +22,7 @@
         "symfony/framework-bundle": "7.2.*",
         "symfony/mercure": "^0.6.5",
         "symfony/mercure-bundle": "^0.3.9",
+        "symfony/messenger": "7.2.*",
         "symfony/property-access": "7.2.*",
         "symfony/property-info": "7.2.*",
         "symfony/runtime": "7.2.*",
